<resources>
    <string name="app_name">Get Up Monster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_button_text">Log Out</string>
    <string name="login_button_text">Log in</string>
    <string name="go_next_button_text">Go to Suggestion</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Build Up A Morning Routine</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="signup">Sign Up</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="choose_a_register_method">Choose a Register Method</string>
    <string name="log_out">log out</string>
</resources>