<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/indigo_daisy"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="296dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/choose_a_register_method"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button"
            app:layout_constraintStart_toStartOf="@+id/tv_logo"
            app:layout_constraintTop_toBottomOf="@+id/tv_logo" />

        <Button
            android:id="@+id/google_sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/sign_in_with_google"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/email_sign_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
            app:layout_constraintWidth_percent="0.8" />

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="150dp"

            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="32dp"

            android:paddingEnd="32dp"
            android:text="@string/sign_in_with_email"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button"

            app:layout_constraintWidth_percent="0.8" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>